--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@
     <div class="app-container">
         <header class="header">
             <h1>🌟 MathQuest Kids 🌟</h1>
+            <p class="author-name">by Abdallah Alsammani</p>
             <p>Fun Math Adventures for Little Learners!</p>
         </header>
 
