--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
         <header class="header">
             <h1>🌟 MathQuest Kids 🌟</h1>
             <p class="author-name">by Abdallah Alsammani</p>
-            <p>Fun Math Adventures for Little Learners!</p>
+            <p class="subtitle">Fun Math Learning for Grades K-3</p>
         </header>
 
         <!-- Grade Selection -->
